--- a/.gitignore
+++ b/.gitignore
@@ -263,4 +263,4 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
-# End of https://www.toptal.com/developers/gitignore/api/django,python
+.vscode/
